[IMP] Switched function of eq_report_purchase_quotation to eq_report_helper

--- a/equitania/views/eq_report_purchase_quotation.xml
+++ b/equitania/views/eq_report_purchase_quotation.xml
@@ -118,7 +118,7 @@
 				            <span t-field="order_line.get_delivery_date"/>
 				        </td>
 				        <td class="text-right">
-				            <span t-field="order_line.product_qty"/>
+				            <span t-esc="get_qty(order_line.product_qty, o.partner_id.lang)"/>
 				            <span t-field="order_line.product_uom" groups="product.group_uom"/>
 				        </td>
 				    </tr>
