--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -199,19 +199,16 @@
 	                        <div id="agreement_id"/>
                         </td>
                         <td class="text-right">
-                            <span t-field="line.product_uom_qty"/> <span t-field="line.product_uom.name"/>
+                            <span t-esc="get_qty(line.product_uom_qty, o.partner_id.lang)"/> <span t-field="line.product_uom.name"/>
                         </td>
-                        <!-- <td class="text-right">
-                            <span t-field="line.product_uom.name"/>
-                        </td>-->
                         <td class="text-right">
-                            <span t-field="line.price_unit"/>
+                            <span t-esc="get_price(line.price_unit, o.partner_id.lang)"/>
                         </td>
 						<td t-if="any([line.discount for line in o.order_line])" class="text-right">
-							<span t-field="line.discount"/>
+							<span t-esc="get_standard_price(line.discount, o.partner_id.lang)"/>
 						</td>
                         <td class="text-right">
-                            <span t-field="line.price_subtotal" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.pricelist_id.currency_id&quot;}"/>
+                            <span t-esc="get_standard_price(line.price_subtotal, o.partner_id.lang)" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.pricelist_id.currency_id&quot;}"/>
                         </td>
                     </tr>
                     </t>
@@ -279,13 +276,13 @@
                         <tbody>
                             <tr>
                                 <td class="text-right" id="price_netto_amount">
-                                    <span t-field="o.amount_untaxed" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.pricelist_id.currency_id&quot;}"/>
+                                    <span t-esc="get_standard_price(o.amount_untaxed, o.partner_id.lang)" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.pricelist_id.currency_id&quot;}"/>
                                 </td>
                                 <td class="text-right" t-if="o.order_line[0].tax_id">
-                                    <span t-field="o.amount_tax" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.pricelist_id.currency_id&quot;}"/>
+                                    <span t-esc="get_standard_price(o.amount_tax, o.partner_id.lang)" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.pricelist_id.currency_id&quot;}"/>
                                 </td>
                                 <td class="text-right">
-                                    <span t-field="o.amount_total" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.pricelist_id.currency_id&quot;}"/>
+                                    <span t-esc="get_standard_price(o.amount_total, o.partner_id.lang)" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.pricelist_id.currency_id&quot;}"/>
                                 </td>
                             </tr>
                         </tbody>
