--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -144,7 +144,7 @@
             <table class="table table-condensed">
 				<thead>
 					<tr>
-						<th><strong>Seq.</strong></th>
+						<th><strong>Seq</strong></th>
 						<th>
 							<strong>Item no.</strong>
 						</th>
