--- a/equitania/views/eq_report_stockpicking.xml
+++ b/equitania/views/eq_report_stockpicking.xml
@@ -117,7 +117,6 @@
 					<tr>
 						<td>
 							<span t-field="o.origin"/>		
-							<!-- TODO: !add this! -->
 							<span t-esc="get_weight(o.weight, o.partner_id.lang)" />					
 						</td>
 						<td>
@@ -148,7 +147,7 @@
 				<thead>
 					<tr>
                         <th>
-    						<strong>Seq.</strong>
+    						<strong>Seq</strong>
 						</th>
                         <th>
     						<strong>Product</strong>
@@ -177,7 +176,8 @@
 				<tbody>
 					<tr t-foreach="o.move_lines" t-as="move">
     					<td>
-							<t t-esc="move_index + 1"/>
+    						<!-- pos no from contract -->
+    						<t t-esc="move.eq_pos_no"/>
 						</td>
     					<td>
 							<span t-field="move.product_id"/>
