--- a/equitania/views/eq_report_sale_order.xml
+++ b/equitania/views/eq_report_sale_order.xml
@@ -202,13 +202,13 @@
                             <span t-esc="get_qty(line.product_uom_qty, o.partner_id.lang)"/> <span t-field="line.product_uom.name"/>
                         </td>
                         <td class="text-right">
-                            <span t-esc="get_price(line.price_unit, o.partner_id.lang)"/>
+                            <span t-esc="get_price(line.price_unit, o.partner_id.lang, o.currency_id)"/>
                         </td>
 						<td t-if="any([line.discount for line in o.order_line])" class="text-right">
-							<span t-esc="get_standard_price(line.discount, o.partner_id.lang)"/>
+							<span t-esc="get_standard_price(line.discount, o.partner_id.lang, o.currency_id)"/>
 						</td>
                         <td class="text-right">
-                            <span t-esc="get_standard_price(line.price_subtotal, o.partner_id.lang)" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.pricelist_id.currency_id&quot;}"/>
+                            <span t-esc="get_standard_price(line.price_subtotal, o.partner_id.lang, o.currency_id)"/>
                         </td>
                     </tr>
                     </t>
@@ -276,13 +276,13 @@
                         <tbody>
                             <tr>
                                 <td class="text-right" id="price_netto_amount">
-                                    <span t-esc="get_standard_price(o.amount_untaxed, o.partner_id.lang)" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.pricelist_id.currency_id&quot;}"/>
+                                    <span t-esc="get_standard_price(o.amount_untaxed, o.partner_id.lang, o.currency_id)"/>
                                 </td>
                                 <td class="text-right" t-if="o.order_line[0].tax_id">
-                                    <span t-esc="get_standard_price(o.amount_tax, o.partner_id.lang)" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.pricelist_id.currency_id&quot;}"/>
+                                    <span t-esc="get_standard_price(o.amount_tax, o.partner_id.lang, o.currency_id)"/>
                                 </td>
                                 <td class="text-right">
-                                    <span t-esc="get_standard_price(o.amount_total, o.partner_id.lang)" t-field-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: &quot;o.pricelist_id.currency_id&quot;}"/>
+                                    <span t-esc="get_standard_price(o.amount_total, o.partner_id.lang, o.currency_id)"/>
                                 </td>
                             </tr>
                         </tbody>
