--- a/equitania/views/eq_purchase_view.xml
+++ b/equitania/views/eq_purchase_view.xml
@@ -9,15 +9,15 @@
 			<field name="arch" type="xml">
 				<data>
 				<xpath expr="/tree[@string='Purchase Order Lines']" position="replace">
-					<tree string="Purchase Order Lines" create="true">
+					<tree string="Purchase Order Lines" fonts="bold:eq_qty_left > 0" colors="grey:state=='cancel';blue:state == 'draft';red:state in ('done')">
 						<field name="eq_sequence" />
 						<field name="order_id" string="Purchase Order"/>
 						<field name="eq_purchase_supplier_order_ref"/>
 						<field name="eq_supplier_no" />
 						<field name="partner_id" string="Supplier" />
 						<field name="date_planned"  string="Delivery Date" widget="date" width="135"/>
-						<field name="product_qty"/>
-						<field name="eq_qty_left"/>
+						<field name="product_qty" sum="Total Quantity"/>
+						<field name="eq_qty_left" sum="Total Quantity left"/>
 						<field name="product_id" string="Product Number"/>
 						<field name="eq_drawing_number"/>
 						<field name="state"/>
