--- a/equitania/views/eq_report_stockpicking.xml
+++ b/equitania/views/eq_report_stockpicking.xml
@@ -182,15 +182,7 @@
     					<td>
 							<span t-field="move.product_id"/>
 						</td>
-						<td>
-							<span t-field="move.name"/>
-							<t t-if="move.product_id.eq_drawing_number">
-								<p>Drawing No.: <span t-field="move.product_id.eq_drawing_number"/></p><!-- Zeigt die Zeichnungsnummer der Produktvariante an -->
-							</t>
-							<t t-if="not move.product_id.eq_drawing_number">
-								<p>Drawing No.: <span t-field="move.product_id.product_tmpl_id.eq_drawing_number"/></p><!-- Zeigt die Zeichnungsnummer des Hauptprodukts an, wenn für die Variante keine Nummer hinterlegt ist -->
-							</t>
-						</td>
+						<td id="eq_drawing_number"/>
 						<td class="text-right">
 							<span t-esc="get_qty(move.product_uom_qty, o.partner_id.lang)"/>
 							<span t-field="move.product_uom" groups="product.group_uom"/>
